--- a/Web Extension/popup.html
+++ b/Web Extension/popup.html
@@ -19,7 +19,7 @@
     <button id="toggleCapture">Activate Capture</button>
 
     <div class="footer">
-      <p>&copy; 2024 Protego. All rights reserved. <img src="logo2.png" alt="Website Icon"></p> 
+      <p> Visit our website for more information <a href="#"> <img src="logo2.png" alt="Website Icon"></p> </a>
     </div>
   
   </div>
