--- a/Web Extension/popup.html
+++ b/Web Extension/popup.html
@@ -3,10 +3,8 @@
 <head>
   <title>Protego</title>
   <link rel="stylesheet" href="popup.css">
-  
 </head>
 <body>
-
   <div class="content">
     <div class="header">
       <img class="logo" src="logo.png">
@@ -14,18 +12,32 @@
       <p> Activate protego to shield yourself against scam and fradulent links </p>
     </div>
     <hr>
+      <table id="recentURLs">
+      <thead>
+        <tr>
+            <th>Recent URLs</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tbody>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+            <tr><td></td></tr>
+          </tbody>
+        </tbody>
+      </table>
+
     <p id="prediction"></p>
 
     <button id="toggleCapture">Activate Capture</button>
 
     <div class="footer">
-      <p> Visit our website for more information <a href="#"> <img src="logo2.png" alt="Website Icon"></p> </a>
+      <p> For more information visit our website:  <a href="#"><img src="logo2.png" alt="Website Icon"></p> </a>
     </div>
-  
-  </div>
-    
-  
 
+  </div>
     <script src="popup.js"></script>
 </body>
 </html>
