--- a/Web Extension/popup.html
+++ b/Web Extension/popup.html
@@ -28,7 +28,7 @@
           </tbody>
         </tbody>
       </table>
-
+    <h3 id="URLresult"></h3>
     <p id="prediction"></p>
 
     <button id="toggleCapture">Activate Capture</button>
